--- a/index.html
+++ b/index.html
@@ -1,15 +1,8 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Sun May 05 2024 14:44:37 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Sun May 05 2024 15:31:35 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6615b4ab029896aa25094b86" data-wf-site="6615b4ab029896aa25094b35">
 <head>
   <meta charset="utf-8">
   <title>Angus R Williams</title>
-  <meta content="Introducing Osmic - one of the most powerful portfolio templates ever created. It combines a modern, dark, creative, and boxy style to showcase your talent. This portfolio template helps you showcase what you do, your processes, and who you are to your audience." name="description">
-  <meta content="Osmic (Light)- Webflow HTML Website Template" property="og:title">
-  <meta content="Introducing Osmic - one of the most powerful portfolio templates ever created. It combines a modern, dark, creative, and boxy style to showcase your talent. This portfolio template helps you showcase what you do, your processes, and who you are to your audience." property="og:description">
-  <meta content="https://uploads-ssl.webflow.com/63fbd088a4a99076f8fa0133/63fc87cff7ed6977570e6ebd_opengraph-1.png" property="og:image">
-  <meta content="Osmic (Light)- Webflow HTML Website Template" property="twitter:title">
-  <meta content="Introducing Osmic - one of the most powerful portfolio templates ever created. It combines a modern, dark, creative, and boxy style to showcase your talent. This portfolio template helps you showcase what you do, your processes, and who you are to your audience." property="twitter:description">
-  <meta content="https://uploads-ssl.webflow.com/63fbd088a4a99076f8fa0133/63fc87cff7ed6977570e6ebd_opengraph-1.png" property="twitter:image">
   <meta property="og:type" content="website">
   <meta content="summary_large_image" name="twitter:card">
   <meta content="width=device-width, initial-scale=1" name="viewport">
@@ -58,7 +51,7 @@
             </h1>
             <h3 class="heading-2">LLMs · AI Safety · Online Safety · Deep Learning · NLP · Python · Tech Policy </h3>
           </div>
-          <div id="w-node-_55dfd223-57e8-4b36-b6d2-df7110457e79-25094b86" class="contact-card"><img src="images/brockwell_edit_circle_large.png" loading="lazy" width="280" sizes="(max-width: 479px) 60vw, 280px" alt="" srcset="images/brockwell_edit_circle_large-p-500.png 500w, images/brockwell_edit_circle_large-p-800.png 800w, images/brockwell_edit_circle_large-p-1080.png 1080w, images/brockwell_edit_circle_large-p-1600.png 1600w, images/brockwell_edit_circle_large.png 1800w" class="image-2">
+          <div id="w-node-_55dfd223-57e8-4b36-b6d2-df7110457e79-25094b86" class="contact-card"><img src="images/brockwell_edit_circle_large.png" loading="eager" width="280" sizes="(max-width: 479px) 60vw, 280px" alt="" srcset="images/brockwell_edit_circle_large-p-500.png 500w, images/brockwell_edit_circle_large-p-800.png 800w, images/brockwell_edit_circle_large-p-1080.png 1080w, images/brockwell_edit_circle_large-p-1600.png 1600w, images/brockwell_edit_circle_large.png 1800w" class="image-2">
             <a href="mailto:angusrwilliams@gmail.com" class="button w-button">angusrwilliams@gmail.com</a>
           </div>
         </div>
