--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Sun May 05 2024 15:31:35 GMT+0000 (Coordinated Universal Time)  -->
+<!DOCTYPE html><!--  This site was created in Webflow. https://www.webflow.com  --><!--  Last Published: Sun May 05 2024 15:35:54 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="6615b4ab029896aa25094b86" data-wf-site="6615b4ab029896aa25094b35">
 <head>
   <meta charset="utf-8">
@@ -154,7 +154,7 @@
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
-                  <li class="list_cv">Working on AI Safety &amp; Online Safety research with AI researchers, social scientists, and policy experts, within Public Policy programme.</li>
+                  <li class="list_cv">Units taken include:<em> <br>Applied Data Science<br>Applied Deep Learning<br>Machine Learning<br>Design &amp; Systems Thinking for Innovation</em></li>
                   <li class="list_cv">Founder &amp; President, The Innovation Society</li>
                   <li class="list_cv">Organiser, Innovation Design Hackathon 2019</li>
                   <li class="list_cv">Project Manager, Bristol Sustainability Jam 2018</li>
