--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             </div>
             <div class="work-detail">
               <div class="work-description">
-                <h6 class="h6-heading">Exploring domain-demographic transfer performance in language models for abuse classification.</h6>
+                <h6 class="h6-heading">Evaluating low-resource ML in social science using LLMs.</h6>
               </div>
               <a href="https://arxiv.org/abs/2401.12295" target="_blank" class="detail-button w-inline-block">
                 <div class="icon w-embed"><svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -224,7 +224,7 @@
             </div>
             <div class="work-detail">
               <div class="work-description">
-                <h6 class="h6-heading">Collecting data and training classifiers to label posts targeted at players to analyse patterns in abuse. </h6>
+                <h6 class="h6-heading">Collecting data and training language models to detect abuse targeted at football players. </h6>
               </div>
               <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4403913" target="_blank" class="detail-button w-inline-block">
                 <div class="icon w-embed"><svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
