--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
             <h2 class="h2-heading timezone">Based in<br>London, UK</h2>
           </div>
           <div id="w-node-b4038914-cd95-5e00-ab4b-a5ea4511b26b-25094b86" class="card">
-            <h3 class="h3-heading">I&#x27;m interested in how growing AI capabilities impact society, and how we can work to make AI safer for use in practice. Currently working on evals and experiments around societal harms &amp; LLMs, and building better AI classifiers for harmful content.</h3>
+            <h3 class="h3-heading">I&#x27;m interested in how growing AI capabilities impact society, and how we can work to make AI safer for use in practice. Currently working on evals and experiments around societal harms &amp; LLMs, and building better classifiers for harmful content.</h3>
           </div>
         </div>
       </div>
@@ -172,7 +172,30 @@
           <div class="work-content">
             <div id="w-node-fee3466d-1a28-14b3-5b0a-822a7acde27a-25094b86" class="work-title">
               <h4 id="w-node-_6eba0963-4173-fd14-076e-7a9539e552b0-25094b86" class="h4-heading">
-                <a href="https://emojipedia.org/dodo">🦤</a> DoDo Learning
+                🎭 LLM Disinformation
+              </h4>
+              <div class="work-text">Evaluating LLMs for malicious info ops.</div>
+            </div>
+            <div class="work-detail">
+              <div class="work-description">
+                <h6 class="h6-heading">Measuring compliance and "humanness" of AI-generated election disinformation.</h6>
+              </div>
+              <a href="https://arxiv.org/abs/2408.06731" target="_blank" class="detail-button w-inline-block">
+                <div class="icon w-embed"><svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.6406 34.9922L13.0234 32.375L28.7852 16.6133H16.7148L16.7539 13H34.9766V31.2617H31.3633L31.3828 19.2305L15.6406 34.9922Z" fill="currentColor"></path>
+                  </svg></div>
+              </a>
+            </div>
+          </div>
+          <div class="work-image-large"><img src="images/diselecthero.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 98vw, 90vw" alt="" class="work-image"></div>
+        </div>
+      </div>
+      <div class="container work-container">
+        <div class="work-card">
+          <div class="work-content">
+            <div id="w-node-fee3466d-1a28-14b3-5b0a-822a7acde27a-25094b86" class="work-title">
+              <h4 id="w-node-_6eba0963-4173-fd14-076e-7a9539e552b0-25094b86" class="h4-heading">
+                🦤 DoDo Learning
               </h4>
               <div class="work-text">Cross-domain abuse classification</div>
             </div>
