--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
         <div class="w-layout-grid grid-header">
           <div id="w-node-_6d7a91e3-1796-9bef-6cf4-0eccd6b5b420-25094b86" data-w-id="6d7a91e3-1796-9bef-6cf4-0eccd6b5b420" class="card">
             <h1 class="heading-2">ANGUS <span class="text-span-6">REDLARSKI</span> WILLIAMS</h1>
-            <h1 class="h1-heading">Data scientist, researcher, and engineer working on AI Safety &amp; Online Safety research <span class="text-span-2">at</span>
+            <h1 class="h1-heading">Data Scientist / Researcher / Engineer working on  AI Safety &amp; Online Safety research <span class="text-span-2">at</span>
               <a href="https://www.turing.ac.uk/" target="_blank"><span class="text-span">The Alan Turing Institute</span></a>
             </h1>
-            <h3 class="heading-2">LLMs · AI Safety · Online Safety · Deep Learning · NLP · Python · Tech Policy </h3>
+            <h3 class="heading-2">LLMs · AI Safety · Online Safety · Deep Learning · NLP · Python </h3>
           </div>
           <div id="w-node-_55dfd223-57e8-4b36-b6d2-df7110457e79-25094b86" class="contact-card"><img src="images/brockwell_edit_circle_large.png" loading="eager" width="280" sizes="(max-width: 479px) 60vw, 280px" alt="" srcset="images/brockwell_edit_circle_large-p-500.png 500w, images/brockwell_edit_circle_large-p-800.png 800w, images/brockwell_edit_circle_large-p-1080.png 1080w, images/brockwell_edit_circle_large-p-1600.png 1600w, images/brockwell_edit_circle_large.png 1800w" class="image-2">
             <a href="mailto:angusrwilliams@gmail.com" class="button w-button">angusrwilliams@gmail.com</a>
@@ -79,7 +79,7 @@
             <h2 class="h2-heading timezone">Based in<br>London, UK</h2>
           </div>
           <div id="w-node-b4038914-cd95-5e00-ab4b-a5ea4511b26b-25094b86" class="card">
-            <h3 class="h3-heading">I&#x27;m interested in how growing AI capabilities impact society, and how we can work to make AI safer for use in practice. Currently working on evals and experiments around societal harms &amp; LLMs, and building better classifiers for harmful content.</h3>
+            <h3 class="h3-heading">I&#x27;m interested in building better ways of evaluating the safety of frontier AI models, and their impact on society. Currently working on developing AI safety eval methodologies and infrastructure.</h3>
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
           <div class="work-image-large"><img src="images/dodohero.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 98vw, 90vw" srcset="images/dodohero-p-500.jpg 500w, images/dodohero-p-800.jpg 800w, images/dodohero-p-1080.jpg 1080w, images/dodohero-p-1600.jpg 1600w, images/dodohero-p-2000.jpg 2000w, images/dodohero.jpg 2482w" alt="" class="work-image"></div>
         </div>
       </div>
-      <div class="container work-container">
+      <!-- <div class="container work-container">
         <div class="work-card">
           <div class="work-content">
             <div id="w-node-d3285991-3468-d444-9c6e-9ff6595e1281-25094b86" class="work-title">
@@ -234,6 +234,29 @@
             </div>
           </div>
           <div class="work-image-large"><img src="images/clhero.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 98vw, 90vw" srcset="images/clhero-p-500.jpg 500w, images/clhero-p-800.jpg 800w, images/clhero-p-1080.jpg 1080w, images/clhero-p-1600.jpg 1600w, images/clhero-p-2000.jpg 2000w, images/clhero.jpg 2521w" alt="" class="work-image"></div>
+        </div>
+      </div> -->
+      <div class="container work-container">
+        <div class="work-card">
+          <div class="work-content">
+            <div id="w-node-fee3466d-1a28-14b3-5b0a-822a7acde27a-25094b86" class="work-title">
+              <h4 id="w-node-_6eba0963-4173-fd14-076e-7a9539e552b0-25094b86" class="h4-heading">
+                🔭 Online Harms Observatory
+              </h4>
+              <div class="work-text">Tracking online abuse.</div>
+            </div>
+            <div class="work-detail">
+              <div class="work-description">
+                <h6 class="h6-heading">Building pipelines and deploying language models to deliver real-time analytics on online harm.</h6>
+              </div>
+              <a href="https://www.turing.ac.uk/research/research-projects/online-harms-observatory" target="_blank" class="detail-button w-inline-block">
+                <div class="icon w-embed"><svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.6406 34.9922L13.0234 32.375L28.7852 16.6133H16.7148L16.7539 13H34.9766V31.2617H31.3633L31.3828 19.2305L15.6406 34.9922Z" fill="currentColor"></path>
+                  </svg></div>
+              </a>
+            </div>
+          </div>
+          <div class="work-image-large"><img src="images/ohohero.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 98vw, 90vw" alt="" class="work-image"></div>
         </div>
       </div>
       <div class="container work-container">
