--- a/index.html
+++ b/index.html
@@ -195,6 +195,29 @@
           <div class="work-content">
             <div id="w-node-fee3466d-1a28-14b3-5b0a-822a7acde27a-25094b86" class="work-title">
               <h4 id="w-node-_6eba0963-4173-fd14-076e-7a9539e552b0-25094b86" class="h4-heading">
+                🐙 Prompto
+              </h4>
+              <div class="work-text">Facilitating LLM experiments</div>
+            </div>
+            <div class="work-detail">
+              <div class="work-description">
+                <h6 class="h6-heading">Python library for asynchronous querying of LLM endpoints.</h6>
+              </div>
+              <a href="https://arxiv.org/abs/2408.11847" target="_blank" class="detail-button w-inline-block">
+                <div class="icon w-embed"><svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path d="M15.6406 34.9922L13.0234 32.375L28.7852 16.6133H16.7148L16.7539 13H34.9766V31.2617H31.3633L31.3828 19.2305L15.6406 34.9922Z" fill="currentColor"></path>
+                  </svg></div>
+              </a>
+            </div>
+          </div>
+          <div class="work-image-large"><img src="images/promptohero.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 98vw, 90vw" alt="" class="work-image"></div>
+        </div>
+      </div>
+      <div class="container work-container">
+        <div class="work-card">
+          <div class="work-content">
+            <div id="w-node-fee3466d-1a28-14b3-5b0a-822a7acde27a-25094b86" class="work-title">
+              <h4 id="w-node-_6eba0963-4173-fd14-076e-7a9539e552b0-25094b86" class="h4-heading">
                 🦤 DoDo Learning
               </h4>
               <div class="work-text">Cross-domain abuse classification</div>
