--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="w-layout-grid grid-header">
           <div id="w-node-_6d7a91e3-1796-9bef-6cf4-0eccd6b5b420-25094b86" data-w-id="6d7a91e3-1796-9bef-6cf4-0eccd6b5b420" class="card">
             <h1 class="heading-2">ANGUS <span class="text-span-6">REDLARSKI</span> WILLIAMS</h1>
-            <h1 class="h1-heading">Data Scientist / Researcher / Engineer working on  AI Safety &amp; Online Safety research <span class="text-span-2">at</span>
+            <h1 class="h1-heading">Researcher / Engineer conducting, applying, and building systems for AI Safety &amp; Online Safety research <span class="text-span-2">at</span>
               <a href="https://www.turing.ac.uk/" target="_blank"><span class="text-span">The Alan Turing Institute</span></a>
             </h1>
             <h3 class="heading-2">LLMs · AI Safety · Online Safety · Deep Learning · NLP · Python </h3>
@@ -79,7 +79,7 @@
             <h2 class="h2-heading timezone">Based in<br>London, UK</h2>
           </div>
           <div id="w-node-b4038914-cd95-5e00-ab4b-a5ea4511b26b-25094b86" class="card">
-            <h3 class="h3-heading">I&#x27;m interested in building better ways of evaluating the safety of frontier AI models, and their impact on society. Currently working on developing AI safety eval methodologies and infrastructure.</h3>
+            <h3 class="h3-heading">I&#x27;m interested in building better ways of evaluating the safety of frontier AI models, and their impact on society. Currently working on developing AI safety evaluation methodologies and infrastructure.</h3>
           </div>
         </div>
       </div>
@@ -98,11 +98,11 @@
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
-                  <li class="list_cv">Working on AI Safety &amp; Online Safety research with AI researchers, social scientists, and policy experts, within Public Policy programme.</li>
+                  <li class="list_cv">Working with AI researchers, social scientists, and policy experts on AI Safety/Online Safety research.</li>
+                  <li class="list_cv">Building methods and infrastructure for sociotechnical AI Safety evaluations.</li>
+                  <li class="list_cv">Safety testing pre-release frontier models.</li>
                   <li class="list_cv">Conducting &amp; applying technical research, fine-tuning and evaluating LLMs.</li>
-                  <li class="list_cv">Led end-to-end development of the <a href="https://www.turing.ac.uk/research/research-projects/online-harms-observatory" target="_blank">Online Harms Observatory</a>.</li>
-                  <li class="list_cv">Building tools to facilitate access to data and compute resources.</li>
-                  <li class="list_cv">Advising UK Gov and global policymakers on generative AI and online safety.</li>
+                  <li class="list_cv">Built large-scale data/ML pipelines for analysing online abuse.</a></li>
                 </ul>
               </div>
             </div>
@@ -114,8 +114,7 @@
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
-                  <li class="list_cv">Worked with consultants to develop search-traffic based brand ranking solution, in Python, driving 6-figure client investment.</li>
-                  <li class="list_cv">Built recommender system demo, improving F1-Score 123% over baseline model, initiating large scale project with client.</li>
+                  <li class="list_cv">Developed and deployed search traffic ranking solutions and recommender systems at data science consultancy.</li>
                 </ul>
               </div>
             </div>
@@ -126,8 +125,6 @@
               <li class="list_top">Python</li>
               <li class="list-item-2-copy">PyTorch</li>
               <li class="list-item-2-copy">HF Transformers</li>
-              <li class="list-item-2-copy">HF TRL</li>
-              <li class="list-item-2-copy">PEFT</li>
               <li class="list-item-2-copy">Sklearn</li>
               <li class="list-item-2-copy">Flask</li>
               <li class="list_top">SQL</li>
@@ -139,7 +136,6 @@
               <li class="list_top list_top2">Deep Learning</li>
               <li class="list_top list_top2">Transformers</li>
               <li class="list_top list_top2">NLP</li>
-              <li class="list_top list_top3">UI/UX Design</li>
               <li class="list_top list_top3">Tech Policy</li>
             </ul>
           </div>
@@ -154,11 +150,14 @@
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
-                  <li class="list_cv">Units taken include:<em> <br>Applied Data Science<br>Applied Deep Learning<br>Machine Learning<br>Design &amp; Systems Thinking for Innovation</em></li>
-                  <li class="list_cv">Founder &amp; President, The Innovation Society</li>
-                  <li class="list_cv">Organiser, Innovation Design Hackathon 2019</li>
-                  <li class="list_cv">Project Manager, Bristol Sustainability Jam 2018</li>
-                  <li class="list_cv">Project Lead, Project Soteria 2017-2018</li>
+                  <li class="list_cv">Units taken include:</li>
+                  <ul role="list" class="list-3"><em>
+                    <li class="list_cv">Applied Data Science</li>
+                    <li class="list_cv">Applied Deep Learning</li>
+                    <li class="list_cv">Machine Learning</li>
+                    <li class="list_cv">Software Product Engineering</li>
+                    <li class="list_cv">Design &amp; Systems Thinking for Innovation</li>
+                </em></ul>
                 </ul>
               </div>
             </div>
@@ -236,29 +235,6 @@
           <div class="work-image-large"><img src="images/dodohero.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 98vw, 90vw" srcset="images/dodohero-p-500.jpg 500w, images/dodohero-p-800.jpg 800w, images/dodohero-p-1080.jpg 1080w, images/dodohero-p-1600.jpg 1600w, images/dodohero-p-2000.jpg 2000w, images/dodohero.jpg 2482w" alt="" class="work-image"></div>
         </div>
       </div>
-      <!-- <div class="container work-container">
-        <div class="work-card">
-          <div class="work-content">
-            <div id="w-node-d3285991-3468-d444-9c6e-9ff6595e1281-25094b86" class="work-title">
-              <h4 id="w-node-d3285991-3468-d444-9c6e-9ff6595e1282-25094b86" class="h4-heading">
-                <a href="https://emojipedia.org/dodo">💸 Cheap Learning</a>
-              </h4>
-              <div class="work-text">ML/LLMs for social science on a budget</div>
-            </div>
-            <div class="work-detail">
-              <div class="work-description">
-                <h6 class="h6-heading">Evaluating low-resource ML in social science using LLMs.</h6>
-              </div>
-              <a href="https://arxiv.org/abs/2401.12295" target="_blank" class="detail-button w-inline-block">
-                <div class="icon w-embed"><svg width="48" height="48" viewbox="0 0 48 48" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M15.6406 34.9922L13.0234 32.375L28.7852 16.6133H16.7148L16.7539 13H34.9766V31.2617H31.3633L31.3828 19.2305L15.6406 34.9922Z" fill="currentColor"></path>
-                  </svg></div>
-              </a>
-            </div>
-          </div>
-          <div class="work-image-large"><img src="images/clhero.jpg" loading="lazy" sizes="(max-width: 479px) 97vw, (max-width: 767px) 98vw, 90vw" srcset="images/clhero-p-500.jpg 500w, images/clhero-p-800.jpg 800w, images/clhero-p-1080.jpg 1080w, images/clhero-p-1600.jpg 1600w, images/clhero-p-2000.jpg 2000w, images/clhero.jpg 2521w" alt="" class="work-image"></div>
-        </div>
-      </div> -->
       <div class="container work-container">
         <div class="work-card">
           <div class="work-content">
