--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
               <h4 id="w-node-_6eba0963-4173-fd14-076e-7a9539e552b0-25094b86" class="h4-heading">
                 🎭 LLM Disinformation
               </h4>
-              <div class="work-text">Evaluating LLMs for malicious info ops.</div>
+              <div class="work-text">Evaluating LLMs for malicious info ops</div>
             </div>
             <div class="work-detail">
               <div class="work-description">
@@ -242,7 +242,7 @@
               <h4 id="w-node-_6eba0963-4173-fd14-076e-7a9539e552b0-25094b86" class="h4-heading">
                 🔭 Online Harms Observatory
               </h4>
-              <div class="work-text">Tracking online abuse.</div>
+              <div class="work-text">Tracking online abuse</div>
             </div>
             <div class="work-detail">
               <div class="work-description">
@@ -265,7 +265,7 @@
               <h4 id="w-node-_29f92462-889e-7270-660a-97417a4f0658-25094b86" class="h4-heading">
                 <a href="https://emojipedia.org/dodo">⚽ Footballer Abuse</a>
               </h4>
-              <div class="work-text">Abuse on Twitter Against Football Players</div>
+              <div class="work-text">Analysing patterns in online abuse</div>
             </div>
             <div class="work-detail">
               <div class="work-description">
