--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="w-layout-grid grid-header">
           <div id="w-node-_6d7a91e3-1796-9bef-6cf4-0eccd6b5b420-25094b86" data-w-id="6d7a91e3-1796-9bef-6cf4-0eccd6b5b420" class="card">
             <h1 class="heading-2">ANGUS <span class="text-span-6">REDLARSKI</span> WILLIAMS</h1>
-            <h1 class="h1-heading">Researcher / Engineer conducting, applying, and building systems for AI Safety &amp; Online Safety research <span class="text-span-2">at</span>
+            <h1 class="h1-heading">Researcher / Engineer conducting, applying, and building systems for sociotechnical AI Safety research <span class="text-span-2">at</span>
               <a href="https://www.turing.ac.uk/" target="_blank"><span class="text-span">The Alan Turing Institute</span></a>
             </h1>
             <h3 class="heading-2">LLMs · AI Safety · Online Safety · Deep Learning · NLP · Python </h3>
@@ -79,7 +79,7 @@
             <h2 class="h2-heading timezone">Based in<br>London, UK</h2>
           </div>
           <div id="w-node-b4038914-cd95-5e00-ab4b-a5ea4511b26b-25094b86" class="card">
-            <h3 class="h3-heading">I&#x27;m interested in building better ways of evaluating the safety of frontier AI models, and their impact on society. Currently working on developing AI safety evaluation methodologies and infrastructure.</h3>
+            <h3 class="h3-heading">I&#x27;m interested in building better ways of evaluating the safety of frontier AI models, and conducting research to understand their impact on society. Developing AI safety evaluation methodologies, conducting ML research, and building scalable systems to facilitate and productionise research.</h3>
           </div>
         </div>
       </div>
