--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="w-layout-grid grid-header">
           <div id="w-node-_6d7a91e3-1796-9bef-6cf4-0eccd6b5b420-25094b86" data-w-id="6d7a91e3-1796-9bef-6cf4-0eccd6b5b420" class="card">
             <h1 class="heading-2">ANGUS <span class="text-span-6">REDLARSKI</span> WILLIAMS</h1>
-            <h1 class="h1-heading">Researcher / Engineer conducting, applying, and building systems for sociotechnical AI Safety research <span class="text-span-2">at</span>
+            <h1 class="h1-heading">Researcher / Engineer working on AI Safety research <span class="text-span-2">at</span>
               <a href="https://www.turing.ac.uk/" target="_blank"><span class="text-span">The Alan Turing Institute</span></a>
             </h1>
             <h3 class="heading-2">LLMs · AI Safety · Online Safety · Deep Learning · NLP · Python </h3>
