--- a/index.html
+++ b/index.html
@@ -13,6 +13,34 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.png" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org/",
+    "@type": "Person",
+    "name": "Angus R Williams",
+    "alternateName": [
+      "Angus Williams",
+      "Angus R. Williams",
+      "A.R. Williams",
+      "Angus Redlarski Williams",
+      "Angus RW"
+    ],
+    "url": "https://angusrw.com/",
+    "image": "https://angusrw.com/images/brockwell_edit_circle_large-p-500.png",
+    "sameAs": [
+      "https://x.com/angusrw4",
+      "https://www.linkedin.com/in/arw/",
+      "https://github.com/angusrw",
+      "https://scholar.google.com/citations?hl=en&user=lzWTqEcAAAAJ",
+      "https://angusrw.com/"
+    ],
+    "jobTitle": "Senior Data Scientist",
+    "worksFor": {
+      "@type": "Organization",
+      "name": "The Alan Turing Institute"
+    }  
+  }
+  </script>
 </head>
 <body>
   <div class="page-wrapper">
