--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
-                  <li class="list_cv">Working with AI researchers, social scientists, and policy experts on AI Safety/Online Safety research.</li>
+                  <li class="list_cv">Working with AI researchers, social scientists, and policy experts on AI Safety and Online Safety research.</li>
                   <li class="list_cv">Building methods and infrastructure for sociotechnical AI Safety evaluations.</li>
                   <li class="list_cv">Safety testing pre-release frontier models.</li>
                   <li class="list_cv">Conducting &amp; applying technical research, fine-tuning and evaluating LLMs.</li>
