--- a/index.html
+++ b/index.html
@@ -38,7 +38,13 @@
     "worksFor": {
       "@type": "Organization",
       "name": "The Alan Turing Institute"
-    }  
+    },
+    "knowsAbout": [
+      "AI Safety",
+      "Machine Learning",
+      "Large Language Models",
+      "Artificial Intelligence"
+    ]  
   }
   </script>
 </head>
