--- a/index.html
+++ b/index.html
@@ -79,11 +79,11 @@
       <div class="container">
         <div class="w-layout-grid grid-header">
           <div id="w-node-_6d7a91e3-1796-9bef-6cf4-0eccd6b5b420-25094b86" data-w-id="6d7a91e3-1796-9bef-6cf4-0eccd6b5b420" class="card">
-            <h1 class="heading-2">ANGUS <span class="text-span-6">REDLARSKI</span> WILLIAMS</h1>
-            <h1 class="h1-heading">Researcher / Engineer working on AI Safety research <span class="text-span-2">at</span>
+            <h1 class="heading-2">Angus <span class="text-span-6">(Redlarski)</span> Williams</h1>
+            <h1 class="h1-heading">Researching AI Safety, exploring societal impacts of AI, and building AI evaluation infrastructure <span class="text-span-2">at</span>
               <a href="https://www.turing.ac.uk/" target="_blank"><span class="text-span">The Alan Turing Institute</span></a>
             </h1>
-            <h3 class="heading-2">LLMs · AI Safety · Online Safety · Deep Learning · NLP · Python </h3>
+            <h3 class="heading-2">LLMs · AI Safety · Online Harms · Deep Learning · NLP · Python </h3>
           </div>
           <div id="w-node-_55dfd223-57e8-4b36-b6d2-df7110457e79-25094b86" class="contact-card"><img src="images/brockwell_edit_circle_large.png" loading="eager" width="280" sizes="(max-width: 479px) 60vw, 280px" alt="" srcset="images/brockwell_edit_circle_large-p-500.png 500w, images/brockwell_edit_circle_large-p-800.png 800w, images/brockwell_edit_circle_large-p-1080.png 1080w, images/brockwell_edit_circle_large-p-1600.png 1600w, images/brockwell_edit_circle_large.png 1800w" class="image-2">
             <a href="mailto:angusrwilliams@gmail.com" class="button w-button">angusrwilliams@gmail.com</a>
@@ -100,7 +100,10 @@
             <div>google scholar.</div>
           </a>
           <a href="https://twitter.com/angusrw4" target="_blank" class="social-link w-inline-block">
-            <div>twitter.</div>
+            <div>x.</div>
+          </a>
+          <a href="https://bsky.app/profile/angusrw.bsky.social" target="_blank" class="social-link w-inline-block">
+            <div>bluesky.</div>
           </a>
         </div>
         <div class="w-layout-grid grid-header-reverse">
@@ -113,7 +116,7 @@
             <h2 class="h2-heading timezone">Based in<br>London, UK</h2>
           </div>
           <div id="w-node-b4038914-cd95-5e00-ab4b-a5ea4511b26b-25094b86" class="card">
-            <h3 class="h3-heading">I&#x27;m interested in building better ways of evaluating the safety of frontier AI models, and conducting research to understand their impact on society. Developing AI safety evaluation methodologies, conducting ML research, and building scalable systems to facilitate and productionise research.</h3>
+            <h3 class="h3-heading"> Researcher / Engineer with extensive experience conducting and applying research in AI and machine learning to real world problems and data. Currently working on developing novel ways of evaluating the safety and societal impacts of AI models, and building infrastructure to support this.</h3>
           </div>
         </div>
       </div>
@@ -157,20 +160,19 @@
             <h4 class="heading-4">SKILLS</h4>
             <ul role="list" class="list w-list-unstyled">
               <li class="list_top">Python</li>
-              <li class="list-item-2-copy">PyTorch</li>
-              <li class="list-item-2-copy">HF Transformers</li>
-              <li class="list-item-2-copy">Sklearn</li>
-              <li class="list-item-2-copy">Flask</li>
               <li class="list_top">SQL</li>
-              <li class="list_top">Azure</li>
-              <li class="list_top">AWS</li>
+              <li class="list_top">Azure/AWS/GCP</li>
               <li class="list_top">Docker</li>
               <li class="list_top">Git</li>
               <li class="list_top list_top2">Machine Learning</li>
               <li class="list_top list_top2">Deep Learning</li>
               <li class="list_top list_top2">Transformers</li>
               <li class="list_top list_top2">NLP</li>
+              <li class="list_top list_top2">Data Engineering</li>
+              <li class="list_top list_top3">Research Leadership</li>
               <li class="list_top list_top3">Tech Policy</li>
+              <li class="list_top list_top3">AI Safety</li>
+              <li class="list_top list_top3">Online Harms</li>
             </ul>
           </div>
           <div id="w-node-_80674471-4311-f24a-7ce2-978322dfdaf3-25094b86" class="card timezone">
