--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
       <div class="container">
         <div class="w-layout-grid grid-header">
           <div id="w-node-_6d7a91e3-1796-9bef-6cf4-0eccd6b5b420-25094b86" data-w-id="6d7a91e3-1796-9bef-6cf4-0eccd6b5b420" class="card">
-            <h1 class="heading-2">Angus <span class="text-span-6">(Redlarski)</span> Williams</h1>
-            <h1 class="h1-heading">Researching AI Safety, exploring societal impacts of AI, and building AI evaluation infrastructure <span class="text-span-2">at</span>
+            <h1 class="heading-2">Angus <span class="text-span-6">Redlarski</span> Williams</h1>
+            <h1 class="h1-heading">Researching AI Safety and building systems for evaluating AI models <span class="text-span-2">at</span>
               <a href="https://www.turing.ac.uk/" target="_blank"><span class="text-span">The Alan Turing Institute</span></a>
             </h1>
             <h3 class="heading-2">LLMs · AI Safety · Online Harms · Deep Learning · NLP · Python </h3>
@@ -116,7 +116,7 @@
             <h2 class="h2-heading timezone">Based in<br>London, UK</h2>
           </div>
           <div id="w-node-b4038914-cd95-5e00-ab4b-a5ea4511b26b-25094b86" class="card">
-            <h3 class="h3-heading"> Researcher / Engineer with extensive experience conducting and applying research in AI and machine learning to real world problems and data. Currently working on developing novel ways of evaluating the safety and societal impacts of AI models, and building infrastructure to support this.</h3>
+            <h3 class="h3-heading"> Researcher and engineer with extensive experience conducting and applying research in AI and machine learning to real world problems and data. Currently exploring AI safety and societal impacts of AI models.</h3>
           </div>
         </div>
       </div>
