--- a/index.html
+++ b/index.html
@@ -135,19 +135,22 @@
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
-                  <li class="list_cv">Working with AI researchers, social scientists, and policy experts on AI Safety and Online Safety research.</li>
+                  <li class="list_cv">Safety testing pre-release frontier models.</li>
+                  <li class="list_cv">Building infrastructure for evaluating LLMs and human-AI experimentation.</li>
+                  <li class="list_cv">Delivered multiple applied research projects with government stakeholders.</li>
+                  <li class="list_cv">Built large scale cloud data/ML pipelines.</li>
+                  <!-- <li class="list_cv">Working with AI researchers, social scientists, and policy experts on AI Safety and Online Safety research.</li>
                   <li class="list_cv">Building methods and infrastructure for sociotechnical AI Safety evaluations.</li>
                   <li class="list_cv">Safety testing pre-release frontier models.</li>
                   <li class="list_cv">Conducting &amp; applying technical research, fine-tuning and evaluating LLMs.</li>
-                  <li class="list_cv">Built large-scale data/ML pipelines for analysing online abuse.</a></li>
+                  <li class="list_cv">Built large-scale data/ML pipelines for analysing online abuse.</a></li> -->
                 </ul>
               </div>
             </div>
             <div id="w-node-_9ed018da-cd55-dd5c-1e10-6309a537daec-25094b86" class="w-layout-layout quick-stack-4 wf-layout-layout">
               <div class="w-layout-cell">
                 <h1 class="cv_title">Data Scientist</h1>
-                <h1 class="cv_org">Curve Analytics</h1>
-                <h1 class="cv_time">2021</h1>
+                <h1 class="cv_org">Curve Analytics, <span class="cv_time">2021</span></h1>
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
@@ -164,36 +167,37 @@
               <li class="list_top">Azure/AWS/GCP</li>
               <li class="list_top">Docker</li>
               <li class="list_top">Git</li>
-              <li class="list_top list_top2">Machine Learning</li>
+              <li class="list_top list_top2">PyTorch</li>
+              <li class="list_top list_top2">HF Transformers</li>
+              <li class="list_top list_top2">Scikit-learn</li>
+              <li class="list_top list_top2">Pandas</li>
+              <li class="list_top list_top2">NumPy</li>
+              <li class="list_top list_top2">Flask</li>
+              <li class="list_top list_top2">Gradio</li>
+              <li class="list_top list_top2">FastAPI</li>
+              <!-- <li class="list_top list_top2">Machine Learning</li>
               <li class="list_top list_top2">Deep Learning</li>
               <li class="list_top list_top2">Transformers</li>
-              <li class="list_top list_top2">NLP</li>
-              <li class="list_top list_top2">Data Engineering</li>
+              <li class="list_top list_top2">NLP</li> -->
+              <!-- <li class="list_top list_top2">Data Engineering</li>
               <li class="list_top list_top3">Research Leadership</li>
               <li class="list_top list_top3">Tech Policy</li>
               <li class="list_top list_top3">AI Safety</li>
-              <li class="list_top list_top3">Online Harms</li>
+              <li class="list_top list_top3">Online Harms</li> -->
             </ul>
           </div>
           <div id="w-node-_80674471-4311-f24a-7ce2-978322dfdaf3-25094b86" class="card timezone">
             <h4 class="heading-4">EDUCATION</h4>
             <div id="w-node-_93fbfacd-cfd7-cd77-d62f-bd5afef65350-25094b86" class="w-layout-layout quick-stack-4 wf-layout-layout">
               <div class="w-layout-cell">
-                <h1 class="cv_title">MEng (1st)</h1>
-                <h1 class="cv_title">Computer Science with Innovation</h1>
+                <h1 class="cv_title">MEng (1st), Computer Science with Innovation</h1>
                 <h1 class="cv_org">University of Bristol</h1>
                 <h1 class="cv_time">2016 - 2020</h1>
               </div>
               <div class="w-layout-cell cell-2">
                 <ul role="list" class="list-3">
-                  <li class="list_cv">Units taken include:</li>
-                  <ul role="list" class="list-3"><em>
-                    <li class="list_cv">Applied Data Science</li>
-                    <li class="list_cv">Applied Deep Learning</li>
-                    <li class="list_cv">Machine Learning</li>
-                    <li class="list_cv">Software Product Engineering</li>
-                    <li class="list_cv">Design &amp; Systems Thinking for Innovation</li>
-                </em></ul>
+                  <li class="list_cv">Dissertation (1st): NLP classifiers for misleading headline detection.</li>
+                  <li class="list_cv">Units taken include: Applied Data Science, Applied Deep Learning, Machine Learning, Design &amp; Systems Thinking for Innovation</li>
                 </ul>
               </div>
             </div>
