--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <h1 class="h1-heading">Researching AI Safety and building systems for evaluating AI models <span class="text-span-2">at</span>
               <a href="https://www.turing.ac.uk/" target="_blank"><span class="text-span">The Alan Turing Institute</span></a>
             </h1>
-            <h3 class="heading-2">LLMs · AI Safety · Online Harms · Deep Learning · NLP · Python </h3>
+            <h3 class="heading-2">LLMs · Evals · AI Safety · Deep Learning · NLP · Python </h3>
           </div>
           <div id="w-node-_55dfd223-57e8-4b36-b6d2-df7110457e79-25094b86" class="contact-card"><img src="images/brockwell_edit_circle_large.png" loading="eager" width="280" sizes="(max-width: 479px) 60vw, 280px" alt="" srcset="images/brockwell_edit_circle_large-p-500.png 500w, images/brockwell_edit_circle_large-p-800.png 800w, images/brockwell_edit_circle_large-p-1080.png 1080w, images/brockwell_edit_circle_large-p-1600.png 1600w, images/brockwell_edit_circle_large.png 1800w" class="image-2">
             <a href="mailto:angusrwilliams@gmail.com" class="button w-button">angusrwilliams@gmail.com</a>
@@ -171,7 +171,6 @@
               <li class="list_top list_top2">HF Transformers</li>
               <li class="list_top list_top2">Scikit-learn</li>
               <li class="list_top list_top2">Pandas</li>
-              <li class="list_top list_top2">NumPy</li>
               <li class="list_top list_top2">Flask</li>
               <li class="list_top list_top2">Gradio</li>
               <li class="list_top list_top2">FastAPI</li>
